[package]
name = "nodeeditor"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
notify           = "4.0.0"
serde            = "1.0.27"
serde_derive     = "1.0"
rmp-serialize    = "0.8"
rmp-serde        = "0.13.7"
rmpv             = "0.4.0"
rmp-rpc          = "0.1.2"
ws               = "0.7.3"
futures          = "0.1.14"
hyper            = "0.11.2"
hyper-staticfile = "0.1.1"
subprocess       = "0.1.12"
tokio-core       = "0.1"
url              = "1.1"
