[package]
name = "nodeeditor"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
notify           = "4.0.0"
serde            = "1.0.27"
serde_derive     = "1.0"
rmp-serialize    = "0.8"
rmp-serde        = "0.13.7"
rmpv             = "0.4.0"
rmp-rpc          = "0.1.2"
futures          = "0.1.18"
hyper            = "0.11.22"
subprocess       = "0.1.12"
tokio-core       = "0.1"
tokio            = "0.1"
tokio-io         = "0.1"
url              = "1.1"
websocket        = "0.20.2"
lazy_static      = "1.0.0"
regex            = "0.2"
