[package]
name = "nodeeditor"
version = "0.1.0"
authors = ["Selenologist <selenologist@users.noreply.github.com>"]

[dependencies]
notify           = "4.0.0"
serde            = {version = "1.0.27", features = ["rc"]}
serde_json       = "1.0.11"
serde_derive     = "1.0"
#rmp-serde        = "0.13.7"
#rmpv             = "0.4.0"
futures          = "0.1.18"
hyper            = "0.11.22"
subprocess       = "0.1.12"
tokio-core       = "0.1"
tokio            = "0.1"
tokio-io         = "0.1"
url              = "1.1"
lazy_static      = "1.0.0"
regex            = "0.2"
ws               = "0.7.3"
log              = "0.4.1"
env_logger       = "0.5.5"
time             = "0.1"
